--- a/cmd/http/utils/resource/template/base/base_js.gohtml
+++ b/cmd/http/utils/resource/template/base/base_js.gohtml
@@ -2,9 +2,9 @@
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="/_resource/js/jquery.slim.min.js"></script>
-<script src="/_resource/js/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/@popperjs/core@2"></script>
+{{/*<script src="/_resource/js/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>*/}}
 <script src="/_resource/js/bootstrap.min.js" crossorigin="anonymous"></script>
 <!--<script src="/_resource/js/bootstrap.bundle.js" crossorigin="anonymous"></script>-->
 <script src="/_resource/js/fontawesome.min.js" crossorigin="anonymous"></script>
-<script src="/_resource/js/select2.min.js" crossorigin="anonymous"></script>
 {{ end }}
