--- a/cmd/http/utils/resource/template/base/base_styles.gohtml
+++ b/cmd/http/utils/resource/template/base/base_styles.gohtml
@@ -1,11 +1,13 @@
 {{define "base_styles"}}
 <!-- Bootstrap CSS -->
-<link rel="stylesheet" href="/_resource/css/bootstrap.min.css">
+{{/*<link rel="stylesheet" href="/_resource/css/bootstrap.min.css">*/}}
 <!--<link rel="stylesheet" href="/_resource/css/bootstrap-theme.min.css">-->
-<link rel="stylesheet" href="/_resource/css/bootstrap-grid.min.css">
-<link rel="stylesheet" href="/_resource/css/bootstrap-utilities.min.css">
-<link rel="stylesheet" href="/_resource/css/bootstrap-reboot.min.css">
-<link rel="stylesheet" href="/_resource/css/fontawesome.min.css">
+{{/*<link rel="stylesheet" href="/_resource/css/bootstrap-grid.min.css">*/}}
+{{/*<link rel="stylesheet" href="/_resource/css/bootstrap-utilities.min.css">*/}}
+{{/*<link rel="stylesheet" href="/_resource/css/bootstrap-reboot.min.css">*/}}
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<link rel="stylesheet" href="/_resource/fa-css/font-awesome.min.css">
 <link rel="stylesheet" href="/_resource/css/orangely.css">
 <link rel="stylesheet" href="/_resource/css/common.css">
 <!--common.cs-->
