--- a/cmd/http/utils/resource/template/error/error.gohtml
+++ b/cmd/http/utils/resource/template/error/error.gohtml
@@ -3,13 +3,15 @@
 <div class="error">
     <p><b style="font-size: 14px">Error Message: </b>{{ .Message }}</p>
 </div>
-<div class="traceback">
-    <p><b>Traceback: </b></p>
-    <ul>
-        {{ range .Traceback }}
-        <li>{{ . }}</li>
-        {{ end }}
-    </ul>
-</div>
+{{ if and .User .User.IsAdmin }}
+    <div class="traceback">
+        <p><b>Traceback: </b></p>
+        <ul>
+            {{ range .Traceback }}
+            <li>{{ . }}</li>
+            {{ end }}
+        </ul>
+    </div>
+    {{ end }}
     <a href="/" class="btn btn-primary"> Go to Home Page</a>
 {{ end }}
