- some refactoring - some front-end ( bleah )

--- a/cmd/http/utils/resource/template/base/base.gohtml
+++ b/cmd/http/utils/resource/template/base/base.gohtml
@@ -13,6 +13,7 @@
     {{ template "navbar" .}}
     <!--main intro -->
 <!--    <div class="hero-header" style="background-image: url('/_resource/img/music.jpg')">-->
+    {{ template "content0" .}}
     <div class="hero-header">
       <div class="header">
           {{ template "content" .}}
