- some front-end ( bleah )

--- a/cmd/http/utils/resource/css/orangely.css
+++ b/cmd/http/utils/resource/css/orangely.css
@@ -4353,30 +4353,30 @@ textarea.form-control.is-invalid {
   border-radius: 0.25rem;
 }
 
-.page-link {
-  position: relative;
-  display: block;
-  padding: 0.5rem 0.75rem;
-  margin-left: -1px;
-  line-height: 1.25;
-  color: #ffaf1a;
-  background-color: #fff;
-  border: 1px solid #dee2e6;
-}
+/*.page-link {*/
+/*  position: relative;*/
+/*  display: block;*/
+/*  padding: 0.5rem 0.75rem;*/
+/*  margin-left: -1px;*/
+/*  line-height: 1.25;*/
+/*  color: #ffaf1a;*/
+/*  background-color: #fff;*/
+/*  border: 1px solid #dee2e6;*/
+/*}*/
 
-.page-link:hover {
-  z-index: 2;
-  color: #cd8500;
-  text-decoration: none;
-  background-color: #e9ecef;
-  border-color: #dee2e6;
-}
+/*.page-link:hover {*/
+/*  z-index: 2;*/
+/*  color: #cd8500;*/
+/*  text-decoration: none;*/
+/*  background-color: #e9ecef;*/
+/*  border-color: #dee2e6;*/
+/*}*/
 
-.page-link:focus {
-  z-index: 2;
-  outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(255, 175, 26, 0.25);
-}
+/*.page-link:focus {*/
+/*  z-index: 2;*/
+/*  outline: 0;*/
+/*  box-shadow: 0 0 0 0.2rem rgba(255, 175, 26, 0.25);*/
+/*}*/
 
 .page-item:first-child .page-link {
   margin-left: 0;
