--- a/cmd/http/utils/resource/template/song/list.gohtml
+++ b/cmd/http/utils/resource/template/song/list.gohtml
@@ -1,4 +1,19 @@
 {{define "content"}}
+
+    <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-center">
+            <li class="page-item disabled">
+                <a class="page-link">Previous</a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item">
+                <a class="page-link" href="#">Next</a>
+            </li>
+        </ul>
+    </nav>
+
     <div class="row">
         <div class="col-sm-3 mb-3 mb-sm-0">
             <div class="card">
