--- a/cmd/http/utils/resource/template/song/add_song.gohtml
+++ b/cmd/http/utils/resource/template/song/add_song.gohtml
@@ -30,7 +30,7 @@
                 <label for="formFile" class="form-label">Upload</label>
                 <input class="form-control" name="file" type="file" id="formFile" accept=".mid,.midi" required>
             </div>
-            <button type="submit" class="btn btn-success">Submit</button>
+            <button type="submit" class="btn btn-success btn-sm">Submit</button>
         </form>
     </div>
     {{ end }}
