--- a/cmd/http/utils/resource/template/auth/login.gohtml
+++ b/cmd/http/utils/resource/template/auth/login.gohtml
@@ -1,10 +1,14 @@
 {{define "content"}}
-<div class="login-container">
-    <div class="text-wrapper">
-        <h4>Login</h4>
-        <p>Login or create a new account</p>
+    <div class="hero-header">
+        <div class="header">
+            <div class="login-container">
+                <div class="text-wrapper">
+                    <h4>Login</h4>
+                    <p>Login or create a new account</p>
+                </div>
+                <a href="/auth/login/discord" class="btn discord-btn login-button">
+                    <i class="fab fa-discord"></i> Login with Discord</a>
+            </div>
+        </div>
     </div>
-    <a href="/auth/login/discord" class="btn discord-btn login-button">
-        <i class="fab fa-discord"></i> Login with Discord</a>
-</div>
 {{ end }}
