--- a/cmd/http/utils/resource/template/base/base_styles.gohtml
+++ b/cmd/http/utils/resource/template/base/base_styles.gohtml
@@ -7,8 +7,9 @@
 {{/*<link rel="stylesheet" href="/_resource/css/bootstrap-reboot.min.css">*/}}
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<script src="https://kit.fontawesome.com/965d1affc1.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="/_resource/fa-css/font-awesome.min.css">
-<link rel="stylesheet" href="/_resource/css/orangely.css">
+<link rel="stylesheet" href="/_resource/css/navbar.css">
 <link rel="stylesheet" href="/_resource/css/common.css">
 <!--common.cs-->
 {{ end }}
